--- a/views/index.html
+++ b/views/index.html
@@ -5,18 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Manjila's App</title>
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script defer src="/scripts/fontawesome-all.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
-  <!-- <link rel="stylesheet" href="/styles/styles.css"> -->
+  <link rel="stylesheet" href="/styles/styles.css">
   <script src="/scripts/app.js"></script>
 
 </head>
 <body>
+  <header class="teal lighten-3">
+      <h1 class="center-align">Manjila's App</h1>
+  </header>
   <div class= "row">
-    <h1 class="center-align">Manjila's App</h1>
-    <div class="col s4 offset-s2" id="info">
+    <div class="col s4 offset-s2 teal lighten-5" id="info">
       <h3 class="card-panel">About Me</h3>
 
     </div>
@@ -28,11 +32,11 @@
           </div>
           <div>
             <label for="desc">Description</label>
-            <input type="text" class="form-control" name="desc" placeholder="Description">
+            <input type="text" class="form-control" name="description" placeholder="Description">
           </div>
           <div>
             <label for="link">Github Link</label>
-            <input type="text" class="form-control" name="link" placeholder="Github Link">
+            <input type="text" class="form-control" name="githubLink" placeholder="Github Link">
           </div>
           <button type="submit" class="btn btn-default">Create Project</button>
         </form>
