--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
   <script defer src="/scripts/fontawesome-all.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <link rel="stylesheet" href="/styles/styles.css">
+  <!-- <link rel="stylesheet" href="/styles/styles.css"> -->
   <script src="/scripts/app.js"></script>
 
 </head>
