--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,3 +9,11 @@ h1{
 #info{
   margin-left: 50px;
 }
+
+.projectDescriptionInput{
+  display:none;
+}
+
+.projectDescription{
+  display:inline-block;
+}
